Hay que solucionar un error a la hora de añadir la incidencia