@@ -8,7 +8,10 @@ import lombok.ToString;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 public record GetIncidenciaDto(
 
@@ -25,17 +28,35 @@ public record GetIncidenciaDto(
 ) {
 
     public static GetIncidenciaDto of(Incidencia incidencia) {
+        if (incidencia == null) {
+            return null; // Si la incidencia en sí es null, devolvemos null
+        }
         return new GetIncidenciaDto(
-                incidencia.getFecha(),
-                incidencia.getTitulo(),
-                incidencia.getDescripcion(),
-                incidencia.getEstado(),
+                (incidencia.getFecha() != null) ? incidencia.getFecha() : null,
+                (incidencia.getTitulo() != null) ? incidencia.getTitulo() : "",
+                (incidencia.getDescripcion() != null) ? incidencia.getDescripcion() : "",
+                (incidencia.getEstado() != null) ? incidencia.getEstado() : Estado.ABIERTA,
                 incidencia.getUrgencia(),
-                incidencia.getCategorias().stream().map(GetCategoriaDto::of).toList(),
-                incidencia.getEquipos().stream().map(GetEquipoDto::of).toList(),
-                incidencia.getNotas().stream().map(GetNotaDto::of).toList(),
-                GetUbicacionDto.of(incidencia.getUbicacion()),
-                GetUsuarioDto.of(incidencia.getUsuario())
+                (incidencia.getCategorias() != null) ?
+                        incidencia.getCategorias().stream()
+                                .filter(Objects::nonNull) // Evita que haya categorías nulas
+                                .map(GetCategoriaDto::of)
+                                .collect(Collectors.toList())
+                        : Collections.emptyList(),
+                (incidencia.getEquipos() != null) ?
+                        incidencia.getEquipos().stream()
+                                .filter(Objects::nonNull)
+                                .map(GetEquipoDto::of)
+                                .collect(Collectors.toList())
+                        : Collections.emptyList(),
+                (incidencia.getNotas() != null) ?
+                        incidencia.getNotas().stream()
+                                .filter(Objects::nonNull)
+                                .map(GetNotaDto::of)
+                                .collect(Collectors.toList())
+                        : Collections.emptyList(),
+                (incidencia.getUbicacion() != null) ? GetUbicacionDto.of(incidencia.getUbicacion()) : null,
+                (incidencia.getUsuario() != null) ? GetUsuarioDto.of(incidencia.getUsuario()) : null
         );
     }
 
